tests/paczka1/small_fuzzy/47087196.err
Error in line 4: A296 S821 19,64
Error in line 11: UQhqe A639 93,5
